--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/normalize.css">
-    <link rel="stylesheet" href="./assets/css/skeleton.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/fontawesome-all.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <section class="banner">
         <div class="container">
-            <h1>MOST POWERFUL<br>CONCEPT</h1>
+            <h1 class="title-white">MOST POWERFUL<br>CONCEPT</h1>
             <p class="banner-txt">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut ullamcorper leo, eget euismod orci. Cum sociis natoque penatibus
                 et magnis dis parturient monte
@@ -21,5 +21,184 @@
         </div>
     </section>
 
+    <section class="products-small">
+        <div class="container">
+            <h1 class="title-black">NEW <br>ARRIVALS</h1>
+            <div class="row">
+                <div class="col-lg-3 col-sm-6 text-center new">
+                    <img  class="img-fluid" src="./assets/img/products-small/cruche.png" alt="">
+                    <p>
+                        LIGHTOUSE LANTERN
+                    </p>
+                    <span>$250</span>
+                </div>
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <img class="img-fluid" src="./assets/img/products-small/plate.png" alt="">
+                    <p>
+                        LIGHTOUSE LANTERN
+                    </p>
+                    <span>$250</span>
+                </div>
+                <div class="col-lg-3 col-sm-6 text-center sale">
+                    <img class="img-fluid" src="./assets/img/products-small/mug.png" alt="">
+                    <p>
+                        LIGHTOUSE LANTERN
+                    </p>
+                    <span><del>$390</del></span>
+                    <span>$250</span>
+                </div>
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <img class="img-fluid" src="./assets/img/products-small/rock.png" alt="">
+                    <p>
+                        LIGHTOUSE LANTERN
+                    </p>
+                    <span>$250</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="products-large">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-sm-12 products-large-left">
+                    <span>DECORATIONS</span>
+                    <h2>LIGHT <br>LANTERN</h2>
+                    <span>
+                        <sup>$</sup>17
+                    </span>
+                    <img src="./assets/img/products-large/lantern_round.png" alt="">
+                </div>
+                <div class="col-lg-6 col-sm-12 products-large-right">
+                    <span>DECORATIONS</span>
+                    <h2>LIGHT <br>LANTERN</h2>
+                    <span>
+                        <sup>$</sup>24
+                    </span>
+                    <img src="./assets/img/products-large/lantern_white.png" alt="">
+                    <img src="./assets/img/products-large/lantern_rose.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testemonials text-center">
+        <div class="container">
+
+            <div class="testemonial-img-one"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit leo, eget eui dolor. In ut ullamcorper leo, eget euismod orci. Cum
+                sociis natoquem ipsum dolor sit amet </p>
+            <span>MILA GRANT</span>
+        </div>
+    </section>
+
+    <section class="blog">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 text-center">
+                    <img class="img-fluid" src="./assets/img/blog/blog_one.jpg" alt="">
+                    <div class="blog-box">
+                        <span>DESIGN</span>
+                            <p>London Design Festival 2017: The Skandium Townhouse presents Louis Poulsen </p>
+                        <span>Anna Bloom</span>
+                    </div>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <img class="img-fluid" src="./assets/img/blog/blog_two.jpg" alt="">
+                    <div class="blog-box">
+                        <span>STORY</span>
+                        <p>London Design Festival 2017: The Skandium Townhouse presents Louis Poulsen </p>
+                        <span>Anna Bloom</span>
+                    </div>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <img class="img-fluid" src="./assets/img/blog/blog_three.jpg" alt="">
+                    <div class="blog-box">
+                        <span>DESIGN</span>
+                            <p>London Design Festival 2017: The Skandium Townhouse presents Louis Poulsen </p>
+                        <span>Anna Bloom</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+
+    </section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <h6>CONTACT</h6>
+                    <p>+112 34 56 789 1316</p>
+                    <p>Abbot Kinney Blvd.</p>
+                    <p>Copenhagen CA 90291</p>
+                    <a href="#">    
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <h6>HELP</h6>
+                    <a href="#">
+                        <p>FAQ’s</p>
+                    </a>
+                    <a href="#">
+                        <p>Pricing Plans</p>
+                    </a>
+                    <a href="#">
+                        <p>Order Tracking</p>
+                    </a>
+                    <a href="#">
+                        <p>Returns</p>
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <h6>ABOUT US</h6>
+                    <a href="#">
+                        <p>Our Story</p>
+                    </a>
+                    <a href="#">
+                        <p>Job Opportunities</p>
+                    </a>
+                    <a href="#">
+                        <p>Store locator</p>
+                    </a>
+                    <a href="#">
+                        <p>Contact us</p>
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <h6>CUSTOMER SERVICE</h6>
+                    <a href="#">
+                        <p>My account</p>
+                    </a>
+                    <a href="#">
+                        <p>Terms of Use</p>
+                    </a>
+                    <a href="#">
+                        <p>Deliveries & Returns</p>
+                    </a>
+                    <a href="#">
+                        <p>Gift card</p>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 text-left">
+                    <p>&copy; 2017 tondo, All Rights Reserved</p>
+                </div>
+                <div class="col-lg-6 text-right">
+                    <i class="fab fa-cc-paypal"></i>
+                    <i class="fab fa-cc-mastercard"></i>
+                    <i class="fab fa-cc-visa"></i>
+                </div>
+            </div>
+        </div>
+    <footer>
+        <script src="./assets/js/custom.js"></script>
+    </footer>
 </body>
 </html>
