--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/animate.min.css">
     <link rel="stylesheet" href="./assets/css/fontawesome-all.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <section class="banner">
         <div class="container">
-            <h1 class="title-white">MOST POWERFUL<br>CONCEPT</h1>
+            <h1 class="title-white banner-title">MOST POWERFUL<br>CONCEPT</h1>
             <p class="banner-txt">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut ullamcorper leo, eget euismod orci. Cum sociis natoque penatibus
                 et magnis dis parturient monte
@@ -23,7 +24,7 @@
 
     <section class="products-small">
         <div class="container">
-            <h1 class="title-black">NEW <br>ARRIVALS</h1>
+            <h1 class="title-black new-title">NEW <br>ARRIVALS</h1>
             <div class="row">
                 <div class="col-lg-3 col-sm-6 text-center new">
                     <img  class="img-fluid" src="./assets/img/products-small/cruche.png" alt="">
@@ -35,14 +36,14 @@
                 <div class="col-lg-3 col-sm-6 text-center">
                     <img class="img-fluid" src="./assets/img/products-small/plate.png" alt="">
                     <p>
-                        LIGHTOUSE LANTERN
+                        CLASSIC CHAIR
                     </p>
                     <span>$250</span>
                 </div>
                 <div class="col-lg-3 col-sm-6 text-center sale">
                     <img class="img-fluid" src="./assets/img/products-small/mug.png" alt="">
                     <p>
-                        LIGHTOUSE LANTERN
+                        DOOR BUMPER
                     </p>
                     <span><del>$390</del></span>
                     <span>$250</span>
@@ -50,7 +51,7 @@
                 <div class="col-lg-3 col-sm-6 text-center">
                     <img class="img-fluid" src="./assets/img/products-small/rock.png" alt="">
                     <p>
-                        LIGHTOUSE LANTERN
+                        DOOR BUMPER
                     </p>
                     <span>$250</span>
                 </div>
@@ -61,22 +62,29 @@
     <section class="products-large">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-sm-12 products-large-left">
-                    <span>DECORATIONS</span>
-                    <h2>LIGHT <br>LANTERN</h2>
-                    <span>
-                        <sup>$</sup>17
-                    </span>
-                    <img src="./assets/img/products-large/lantern_round.png" alt="">
+                <div class="col-lg-6 col-sm-12">
+                    <div class="products-large-left opacity-zero">
+                        <div class="product-large-txt-wrap ">
+                            <p>DECORATIONS</p>
+                            <h2>LIGHT <br>LANTERN</h2>
+                        </div>
+                        <span>
+                            <sup>$</sup>17
+                        </span>
+                        <img class="img-fluid" src="./assets/img/products-large/lantern_round.png" alt="">
+                    </div>
                 </div>
-                <div class="col-lg-6 col-sm-12 products-large-right">
-                    <span>DECORATIONS</span>
-                    <h2>LIGHT <br>LANTERN</h2>
-                    <span>
-                        <sup>$</sup>24
-                    </span>
-                    <img src="./assets/img/products-large/lantern_white.png" alt="">
-                    <img src="./assets/img/products-large/lantern_rose.png" alt="">
+                <div class="col-lg-6 col-sm-12">
+                    <div class="products-large-right opacity-zero">
+                        <div class="product-large-txt-wrap">
+                            <p>DECORATIONS</p>  
+                            <h2>LIGHT <br>LANTERN</h2>
+                        </div>
+                        <span>
+                            <sup>$</sup>24
+                        </span>
+                        <img class="img-fluid" src="./assets/img/products-large/lantern_two.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -84,11 +92,26 @@
 
     <section class="testemonials text-center">
         <div class="container">
-
-            <div class="testemonial-img-one"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit leo, eget eui dolor. In ut ullamcorper leo, eget euismod orci. Cum
-                sociis natoquem ipsum dolor sit amet </p>
-            <span>MILA GRANT</span>
+            <img id="arrow-left" src="./assets/img/testemonial/arrows_down.png" alt="">
+            <img id="arrow-right" src="./assets/img/testemonial/arrows_down.png" alt="">
+            <div class="testemonials-one animated show">
+                <span class="testemonial-quotations-wrap">
+                    <i class="fas fa-quote-right"></i>
+                    <img class="testemonial-img" src="./assets/img/testemonial/person_one.jpg" alt="">
+                </span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit leo, eget eui dolor. <br>In ut ullamcorper leo, eget euismod orci. Cum
+                    sociis natoquem ipsum dolor sit amet </p>
+                <span>MILA GRANT</span>
+            </div>
+            <div class="testemonials-two animated no-show">
+                <span class="testemonial-quotations-wrap">
+                    <i class="fas fa-quote-right"></i>
+                    <img class="testemonial-img" src="./assets/img/testemonial/person_two.jpg" alt="">
+                </span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit leo, eget eui dolor. <br>In ut ullamcorper leo, eget euismod orci. Cum
+                    sociis natoquem ipsum dolor sit amet </p>
+                <span>DARIA BUGIE</span>
+            </div>
         </div>
     </section>
 
@@ -124,81 +147,92 @@
     </section>
 
     <section class="footer">
-
-    </section>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
-                    <h6>CONTACT</h6>
-                    <p>+112 34 56 789 1316</p>
-                    <p>Abbot Kinney Blvd.</p>
-                    <p>Copenhagen CA 90291</p>
-                    <a href="#">    
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-youtube"></i>
-                    </a>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer-col-wrap">
+                        <h6 class="title-white">CONTACT</h6>
+                        <p>+112 34 56 789</p>
+                        <p>1316 Abbot Kinney Blvd.</p>
+                        <p>Copenhagen CA 90291</p>
+                        <a href="#">    
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-lg-3">
-                    <h6>HELP</h6>
-                    <a href="#">
-                        <p>FAQ’s</p>
-                    </a>
-                    <a href="#">
-                        <p>Pricing Plans</p>
-                    </a>
-                    <a href="#">
-                        <p>Order Tracking</p>
-                    </a>
-                    <a href="#">
-                        <p>Returns</p>
-                    </a>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer-col-wrap">
+                        <h6 class="title-white">HELP</h6>
+                        <a href="#">
+                            <p>FAQ’s</p>
+                        </a>
+                        <a href="#">
+                            <p>Pricing Plans</p>
+                        </a>
+                        <a href="#">
+                            <p>Order Tracking</p>
+                        </a>
+                        <a href="#">
+                            <p>Returns</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-lg-3">
-                    <h6>ABOUT US</h6>
-                    <a href="#">
-                        <p>Our Story</p>
-                    </a>
-                    <a href="#">
-                        <p>Job Opportunities</p>
-                    </a>
-                    <a href="#">
-                        <p>Store locator</p>
-                    </a>
-                    <a href="#">
-                        <p>Contact us</p>
-                    </a>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer-col-wrap">
+                        <h6 class="title-white">ABOUT US</h6>
+                        <a href="#">
+                            <p>Our Story</p>
+                        </a>
+                        <a href="#">
+                            <p>Job Opportunities</p>
+                        </a>
+                        <a href="#">
+                            <p>Store locator</p>
+                        </a>
+                        <a href="#">
+                            <p>Contact us</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-lg-3">
-                    <h6>CUSTOMER SERVICE</h6>
-                    <a href="#">
-                        <p>My account</p>
-                    </a>
-                    <a href="#">
-                        <p>Terms of Use</p>
-                    </a>
-                    <a href="#">
-                        <p>Deliveries & Returns</p>
-                    </a>
-                    <a href="#">
-                        <p>Gift card</p>
-                    </a>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer-col-wrap">
+                        <h6 class="title-white">CUSTOMER SERVICE</h6>
+                        <a href="#">
+                            <p>My account</p>
+                        </a>
+                        <a href="#">
+                            <p>Terms of Use</p>
+                        </a>
+                        <a href="#">
+                            <p>Deliveries & Returns</p>
+                        </a>
+                        <a href="#">
+                            <p>Gift card</p>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 text-left">
-                    <p>&copy; 2017 tondo, All Rights Reserved</p>
+                <div class="col-lg-6 col-sm-8 col-8 text-left footer-copyright">
+                    <p>&copy; 2017 TONDO, ALL RIGHTS RESERVED</p>
                 </div>
-                <div class="col-lg-6 text-right">
+                <div class="col-lg-6 col-sm-4 col-4 text-right footer-cards">
                     <i class="fab fa-cc-paypal"></i>
                     <i class="fab fa-cc-mastercard"></i>
                     <i class="fab fa-cc-visa"></i>
                 </div>
             </div>
         </div>
+    </section>
+
     <footer>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
         <script src="./assets/js/custom.js"></script>
     </footer>
+
 </body>
 </html>
