--- a/index.html
+++ b/index.html
@@ -27,13 +27,27 @@
             <h1 class="title-black new-title">NEW <br>ARRIVALS</h1>
             <div class="row">
                 <div class="col-lg-3 col-sm-6 text-center new">
-                    <img  class="img-fluid" src="./assets/img/products-small/cruche.png" alt="">
+                    <div class="products-hover">
+                        <div class="products-hover-icons-wrap">
+                            <i class="fas fa-plus"></i>
+                            <i class="fas fa-eye"></i>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="./assets/img/products-small/cruche.png" alt="">
                     <p>
                         LIGHTOUSE LANTERN
                     </p>
                     <span>$250</span>
                 </div>
                 <div class="col-lg-3 col-sm-6 text-center">
+                    <div class="products-hover">
+                        <div class="products-hover-icons-wrap">
+                            <i class="fas fa-plus"></i>
+                            <i class="fas fa-eye"></i>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </div>
                     <img class="img-fluid" src="./assets/img/products-small/plate.png" alt="">
                     <p>
                         CLASSIC CHAIR
@@ -41,6 +55,13 @@
                     <span>$250</span>
                 </div>
                 <div class="col-lg-3 col-sm-6 text-center sale">
+                    <div class="products-hover">
+                        <div class="products-hover-icons-wrap">
+                            <i class="fas fa-plus"></i>
+                            <i class="fas fa-eye"></i>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </div>
                     <img class="img-fluid" src="./assets/img/products-small/mug.png" alt="">
                     <p>
                         DOOR BUMPER
@@ -49,6 +70,13 @@
                     <span>$250</span>
                 </div>
                 <div class="col-lg-3 col-sm-6 text-center">
+                    <div class="products-hover">
+                        <div class="products-hover-icons-wrap">
+                            <i class="fas fa-plus"></i>
+                            <i class="fas fa-eye"></i>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </div>
                     <img class="img-fluid" src="./assets/img/products-small/rock.png" alt="">
                     <p>
                         DOOR BUMPER
@@ -62,7 +90,7 @@
     <section class="products-large">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-sm-12">
+                <div class="col-xl-6 col-lg-12">
                     <div class="products-large-left opacity-zero">
                         <div class="product-large-txt-wrap ">
                             <p>DECORATIONS</p>
@@ -74,7 +102,7 @@
                         <img class="img-fluid" src="./assets/img/products-large/lantern_round.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-12">
+                <div class="col-xl-6 col-lg-12">
                     <div class="products-large-right opacity-zero">
                         <div class="product-large-txt-wrap">
                             <p>DECORATIONS</p>  
@@ -121,25 +149,37 @@
                 <div class="col-lg-4 text-center">
                     <img class="img-fluid" src="./assets/img/blog/blog_one.jpg" alt="">
                     <div class="blog-box">
-                        <span>DESIGN</span>
-                            <p>London Design Festival 2017: The Skandium Townhouse presents Louis Poulsen </p>
-                        <span>Anna Bloom</span>
+                        <p class="blog-category">DESIGN</p>
+                            <h2>
+                                LONDON DESIGN FESTIVAL 2017:
+                                <br> THE STKANDIUM TOWNHOUSE
+                                <br> PRESENTS LOUISE POULSEN
+                            </h2>
+                        <p class="blog-author">Anna Bloom</p>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center">
                     <img class="img-fluid" src="./assets/img/blog/blog_two.jpg" alt="">
                     <div class="blog-box">
-                        <span>STORY</span>
-                        <p>London Design Festival 2017: The Skandium Townhouse presents Louis Poulsen </p>
-                        <span>Anna Bloom</span>
+                        <p class="blog-category">STORY</p>
+                        <h2>
+                            LONDON DESIGN FESTIVAL 2017:
+                            <br> THE STKANDIUM TOWNHOUSE
+                            <br> PRESENTS LOUISE POULSEN
+                        </h2>
+                        <p class="blog-author">Anna Bloom</p>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center">
                     <img class="img-fluid" src="./assets/img/blog/blog_three.jpg" alt="">
                     <div class="blog-box">
-                        <span>DESIGN</span>
-                            <p>London Design Festival 2017: The Skandium Townhouse presents Louis Poulsen </p>
-                        <span>Anna Bloom</span>
+                        <p class="blog-category">DESIGN</p>
+                        <h2>
+                            LONDON DESIGN FESTIVAL 2017:
+                            <br> THE STKANDIUM TOWNHOUSE
+                            <br> PRESENTS LOUISE POULSEN
+                        </h2>
+                        <p class="blog-author">Anna Bloom</p>
                     </div>
                 </div>
             </div>
