--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 col-lg-12">
-                    <div class="products-large-left opacity-zero">
+                    <div class="products-large-left">
                         <div class="product-large-txt-wrap ">
                             <p>DECORATIONS</p>
                             <h2>LIGHT <br>LANTERN</h2>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-12">
-                    <div class="products-large-right opacity-zero">
+                    <div class="products-large-right">
                         <div class="product-large-txt-wrap">
                             <p>DECORATIONS</p>  
                             <h2>LIGHT <br>LANTERN</h2>
@@ -146,8 +146,9 @@
     <section class="blog">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 text-center blog-one">
                     <img class="img-fluid" src="./assets/img/blog/blog_one.jpg" alt="">
+                    <div class="overlay"></div>
                     <div class="blog-box">
                         <p class="blog-category">DESIGN</p>
                             <h2>
@@ -160,6 +161,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <img class="img-fluid" src="./assets/img/blog/blog_two.jpg" alt="">
+                    <div class="overlay"></div>
                     <div class="blog-box">
                         <p class="blog-category">STORY</p>
                         <h2>
@@ -172,6 +174,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <img class="img-fluid" src="./assets/img/blog/blog_three.jpg" alt="">
+                    <div class="overlay"></div>
                     <div class="blog-box">
                         <p class="blog-category">DESIGN</p>
                         <h2>
